falta seguridad y detalees

--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -5,6 +5,7 @@
     <head th:fragment="head">
         <title>VideojuegosCookies</title>
         <meta charset="UTF-8"/>
+        <link href="CSS/style.css" rel="stylesheet" type="text/css"/>
         <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
         <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
         <script th:src="@{/js/rutinas.js}"></script>
