--- a/src/main/resources/templates/layout/plantilla01.html
+++ b/src/main/resources/templates/layout/plantilla01.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-        <title>TransJacksonTours</title>
-       <title>TechShop</title>
+        <title>VideojuegosCookie</title>
+        <title>VideojuegosCookie</title>
         <meta charset="UTF-8"/>
         <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
         <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
@@ -84,10 +84,16 @@
                 }
 
 
+                .div1{
+                    height: 60vh !important;
 
+                    background: url('hiace.jpeg') no-repeat center;
+                    background-size: cover;
+                }
                 .header{
                     height: 60vh !important;
-                    background: url('hiace.jpeg') no-repeat center;
+
+                    background: url('templates/layout/hiace.jpeg') no-repeat center;
                     background-size: cover;
                 }
                 .header1{
@@ -116,13 +122,13 @@
                     color: #fff;
                 }
 
-                p{
+                p1{
                     margin-bottom: 40px;
                     font-size: 18px;
                     color: #fff;
                     padding: 0 100px;
                 }
-                .btn1{
+                .btn11{
 
                     display: inline-block;
                     margin-top: 0px;
@@ -134,7 +140,7 @@
 
                 }
 
-                .btn{
+                .btn1{
                     display: inline-block;
                     margin-top: 15px;
                     padding: 10px 40px;
@@ -145,15 +151,15 @@
 
                 }
 
-                .btn:hover{
+                .btn1:hover{
                     background: none;
                 }
 
-                .btn-home {
+                .btn1-home {
                     display: flex;
                 }
 
-                .btn-home a{
+                .btn1-home a{
                     margin: 0 10px;
                 }
 
@@ -222,7 +228,7 @@
 
                 .price{
 
-                    background: url(buses.jpg) no-repeat center;
+                    background:  no-repeat center;
                     background-attachment: fixed;
                     background-size: cover;
                     text-align: center;
@@ -245,63 +251,106 @@
             </style>
 
             <div class="logo">
-                <a href="index.html">TransJacksonTours</a>
+                <a href="../index.html">VideojuegosCookie</a>
+
             </div>
             <nav class="navbar">
-                <a href="inicio.html">Inicio</a>
-                <a href="login.html">Log-in</a>
-                <a href="nosotros.html">Nosotros</a>
-                <a href="Contacto.html">Contacto</a>
-                <a href="transporte.html">Transporte</a>
-                <a href="cotizar.html">Cotizar</a>
+
+                <a th:href="@{/categoria/listado}">[[#{plantilla.categorias}]]</a>
+                <a th:href="@{/producto/listado}">[[#{plantilla.productos}]]</a>
+
+
+                <div class=" navbar justify-content-between navbar-nav">
+                    <a class=" dropdown-toggle" 
+                       data-bs-toggle="dropdown" 
+                       href="#" 
+                       role="button" 
+                       aria-expanded="false">[[#{plantilla.pruebas}]]</a>
+                    <ul class="dropdown-menu dropdown-menu-dark">
+                        <li><a class="dropdown-item" th:href="@{/pruebas/listado}">[[#{plantilla.asociaciones}]]</a></li>
+                        <li><a class="dropdown-item" th:href="@{/pruebas/listado2}">[[#{plantilla.consultas}]]</a></li>
+                        <li><a class="dropdown-item" th:href="@{/usuario/listado}">[[#{plantilla.usuarios}]]</a></li>
+                    </ul>
+                </div>
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">[[#{plantilla.idioma}]]</a>
+                        <ul class="dropdown-menu dropdown-menu-dark">
+                            <li><a class="dropdown-item"  th:href="@{/(lang=es)}">ES</a></li>
+                            <li><a class="dropdown-item" th:href="@{/(lang=en)}">EN</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul class="navbar-nav" sec:authorize='!isAuthenticated()'>
+                    <li class="nav-item px-2">
+                        <a class="nav-link" th:href="@{/login}">
+                            <i class='fas fa-sign-in-alt'></i>
+                        </a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav" sec:authorize='isAuthenticated()'>
+                    <li class="nav-item text-white my-auto">
+                        <img th:src='@{${session.usuarioImagen}}' height="40" class='rounded-circle'/>
+                        <span sec:authentication='name'>Jhon</span>
+                    </li>
+                    <li class="nav-item my-auto">
+                        <form method="post"
+                              th:action='@{/logout}'>
+                            <button class='btn btn-dark'>
+                                <i class='fas fa-sign-out-alt'></i>
+                            </button>
+                        </form>
+                    </li>
+                </ul>
+                </div>
 
             </nav>
         </header>
-        
+
         <header class="content header">
-            
-            <h2 class="title">TransJacksonTours</h2>
+
+            <h2 class="title">VideojuegosCookie</h2>
             <p>
-                Empresa enfocada en el transporte y turismo  
+                Empresa enfocada en videojuegos
             </p>
-            <div class="btn-home">
-                <a href="#" class="btn">Inicio Sesion</a>
-                <a href="#" class="btn">Saber mas</a>
+            <div class="btn1-home">
+
             </div>
         </header>
-        <section class="content sau">
-            <h2 class="title">Transporte</h2>
-            <p>Aqui tienes las diferentes capacidades de cada Bus/Buseta.</p>
+
+        <section class="content sau" th:fragment="hola">
+            <h2 class="title">Accesorios</h2>
+            <p>Diferentes accesorios</p>
             <div class="box-container">
                 <div class="box">
-                    <i class="fas fa-bus-alt"></i>
-                    <h3>TOYOTA Hiace</h3>
-                    <p>Capacidad: 17 pasajeros</p>  
+                    <i class="fa-solid fa-gamepad"></i>
+                    <h3>Control</h3>
+                    <p>Xbox Controller</p>  
                 </div>
                 <div class="box">
-                    <i class="fas fa-bus-alt"></i>
-                    <h3>MITSUBICHI Fuso Rosa 34P</h3>
-                    <p>Capacidad: 33 pasajeros.</p>
+                    <i class="fa-solid fa-gamepad"></i>
+                    <h3>Control</h3>
+                    <p>Ps5 controller</p>
                 </div>
                 <div class="box">
-                    <i class="fas fa-bus-alt"></i>
-                    <h3>Bus</h3>
-                    <p>Capacidad = X pasjeros.</p>
+                    <i class="fa-solid fa-gamepad"></i>
+                    <h3>Control</h3>
+                    <p>Ps4 controller</p>
                 </div>
             </div>
         </section>
 
         <section class="content about">
             <h2 class="title">About us</h2>
-            <p>Quieres observar el transporte con el que contamos</p>
-            <a href="transporte.html" class="btn">Ver Transporte</a>
+            <p>Acerca de nosotros</p>
+            <a href="transporte.html" class="btn1">Ver Articulos</a>
         </section>
         <section class="content price">
             <article class="contain">
                 <h2 class="title">Cotizar</h2>
                 <p>Si desea Cotizar puede ingresar aqui.</p>
             </article>
-            <a href="#" class="btn">Cotizar</a>
+            <a href="#" class="btn1">Cotizar</a>
         </section>
 
         <section class="contact">
