--- a/src/main/resources/templates/producto/listado.html
+++ b/src/main/resources/templates/producto/listado.html
@@ -8,7 +8,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 </head>
                 <body>
-                    <header th:replace="~{layout/plantilla :: header}"/>
+                    <header th:replace="~{layout/plantilla01 :: header}"/>
 
                     <section th:replace="~{producto/fragmentos:: botonesAgregar}"/>
 
